@@ -3,8 +3,10 @@ use strict;
 use warnings;
 
 use Test::More;
-plan skip_all => 'Sub::Exporter not installed'
-   unless eval { require Sub::Exporter };
+BEGIN {
+    plan skip_all => 'Sub::Exporter not installed'
+        unless eval { require Sub::Exporter };
+}
 
 use List::Util 'first';
 use lib 't/lib';
