@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - fix skipping when Sub::Exporter isn't installed
 
 0.001003  2012-08-01 12:47:28 America/Chicago
   - remove warning if there are no defaults
